[gd_scene load_steps=8 format=3 uid="uid://qfygb7po01f4"]

[ext_resource type="Script" path="res://FarmScene/Food/food_item.gd" id="1_og02d"]
[ext_resource type="Texture2D" uid="uid://ccf7vsltur1ul" path="res://Assets/Placeholders/Kenney/Farm/Tiles/tile_0004.png" id="2_fy2aj"]
[ext_resource type="Script" path="res://Input/FollowMouse.gd" id="3_363r1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rmn4v"]
radius = 8.06226

[sub_resource type="Animation" id="Animation_mfdvi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}

[sub_resource type="Animation" id="Animation_f2066"]
resource_name = "get_eaten"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"eaten_animation_finished"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v5h1r"]
_data = {
"RESET": SubResource("Animation_mfdvi"),
"get_eaten": SubResource("Animation_f2066")
}

[node name="FoodItem" type="Node2D"]
script = ExtResource("1_og02d")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(5, 5)
texture = ExtResource("2_fy2aj")

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource("CircleShape2D_rmn4v")

[node name="FollowMouse" type="Node" parent="."]
script = ExtResource("3_363r1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v5h1r")
}
